# mx-defi-tutorial-rs

./: .gitignore  Cargo.toml
.github/workflows/: actions.yml  on_pull_request_build_contracts.yml
meta/: Cargo.toml
output/: escrow.abi.json  escrow.imports.json  escrow.mxsc.json  escrow.wasm
scenarios/: escrow.scen.json
src/: config.rs  errors.rs  escrow.rs  events.rs  offer.rs
tests/: escrow_scenario_go_test.rs  escrow_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
