[package]
name = "escrow"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/escrow.rs"

[dependencies.multiversx-sc]
version = "0.50.2"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.2"

[workspace]
members = [
    ".",
    "meta",
]
